Implement application of system font keywords. Also make parsing of them not fall-through to list-style (ooops). Brain bootup confirmed :)

BUG: 197544

svn path=/trunk/KDE/kdelibs/; revision=1111438